[workspace]
resolver = "2"
members = [
    "common/fw",
    "common/bin",
    "common/ipk",
    "common/verify",
    "packages/elf-verify",
    "packages/ipk-verify",
    "packages/fw-extract",
    "packages/gen-manifest",
]

[workspace.dependencies]
clap = "4.4.6"
regex = "1.9.5"
serde = "1.0.188"
serde_json = "1.0.107"
semver = "1.0.19"
path-slash = "0.2.1"
