[workspace]
resolver = "2"
members = [
    "common/fw",
    "common/bin",
    "common/ipk",
    "common/verify",
    "packages/elf-verify",
    "packages/ipk-verify",
    "packages/fw-extract",
    "packages/gen-manifest",
]

[workspace.dependencies]
clap = "4.5.4"
debpkg = "0.6.0"
path-slash = "0.2.1"
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0.113"
semver = "1.0.21"
tempfile = "3.8.0"