[package]
name = "elf-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"

[dependencies.clap]
version = "4.2.4"
features = ["derive"]

[dependencies.common]
path = "../common"