[package]
name = "ipk-verify"
version = "0.1.0"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
debpkg = "0.6.0"
tempfile = "3.5.0"
path-slash = "0.2.1"
prettytable-rs = "^0.10"

[dependencies.clap]
version = "4.2.4"
features = ["derive"]

[dependencies.common]
path = "../common"

[package.metadata.deb]
section = "devel"