[package]
name = "fw-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.bin-lib]
path = "../bin"

[features]
linux-install = []