[package]
name = "fw-lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dependencies.bin-lib]
path = "../bin"

[features]
linux-install = []