[package]
name = "ipk-lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
debpkg = "0.6.0"
tempfile = "3.8.0"
path-slash = "0.2.1"

[dependencies.bin-lib]
path = "../bin"