[package]
name = "ipk-lib"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
debpkg = "0.6.0"
tempfile = "3.8.0"
path-slash = { workspace = true }
common-path = "1.0.0"

[dependencies.bin-lib]
path = "../bin"