[package]
name = "ipk-lib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debpkg = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
path-slash = { workspace = true }
common-path = "1.0.0"

[dependencies.bin-lib]
path = "../bin"