[package]
name = "verify-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fw-lib = { path = "../../common/fw" }
bin-lib = { path = "../../common/bin", optional = true }
ipk-lib = { path = "../../common/ipk", optional = true }

[features]
default = ["bin"]
bin = ["dep:bin-lib"]
ipk = ["bin", "dep:ipk-lib"]