[package]
name = "verify-lib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin-lib = { path = "../../common/bin", optional = true }
ipk-lib = { path = "../../common/ipk", optional = true }
fw-lib = { path = "../../common/fw", optional = true }
webdetect-lib = { path = "../../common/webdetect", optional = true }
semver = { workspace = true, optional = true }

[features]
default = ["bin"]
bin = ["dep:bin-lib"]
ipk = ["bin", "dep:ipk-lib", "dep:fw-lib", "dep:webdetect-lib", "dep:semver"]